--- a/teclado/src/index.css
+++ b/teclado/src/index.css
@@ -8,7 +8,8 @@
   .keyboard-row {
     display: flex;         
     justify-content: center; 
-    margin-bottom: 10px;   
+    margin-bottom: 10px;  
+    
   }
   
   button {
@@ -20,6 +21,7 @@
     background-color: #f0f0f0;
     cursor: pointer;
     transition: background-color 0.2s;
+    text-transform: capitalize;
   }
   
   button:hover {
@@ -31,6 +33,7 @@
     flex-direction: column;
     background-color: #f0f0f0;
     margin: auto;
+    align-items: center;
   }
 
   .result h2 {
@@ -45,7 +48,9 @@
     background-color: aquamarine;
     border: 2px solid black;
     border-radius: 15px;
-
+    display: flex;
+    width: 500px;
+    height: 15px;
   }
 
   button:active {
