--- a/Lunia/src/components/NavBar.css
+++ b/Lunia/src/components/NavBar.css
@@ -25,7 +25,7 @@ nav {
   nav a:hover {
     text-decoration: underline;
     color: black;
-    transition: ease 0.5s;
+   transition: 0.5s; 
     text-shadow: 0 0 5px rgba(11, 11, 11, 0.75), 0 0 10px rgba(255, 0, 127, 0.5);
     background-color: white;
     transform: scale(1.1);
